<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowCurrentEnv">


    <TextView
        android:id="@+id/title_env"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/txt_title_env"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:text="TextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_env" />

    <TextView
        android:id="@+id/txt_subject_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="84dp"
        android:gravity="center"
        android:text="@string/txt_temp"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_date" />

    <TextView
        android:id="@+id/txt_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_subject_temp" />

    <TextView
        android:id="@+id/txt_cel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/txt_cel"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_temp"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/txt_subject_hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/txt_hum"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subject_temp" />

    <TextView
        android:id="@+id/txt_hum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_subject_hum" />

    <TextView
        android:id="@+id/txt_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/txt_per"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_hum"
        app:layout_constraintEnd_toEndOf="parent" />


    <TextView
        android:id="@+id/txt_subject_pres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/txt_prs"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_subject_hum" />

    <TextView
        android:id="@+id/txt_pres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:text="TextView"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_subject_pres" />

    <TextView
        android:id="@+id/txt_hpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/txt_hpa"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="@+id/txt_pres"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_envlist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/btn_preenv"
        android:textSize="25sp"
        app:layout_constraintTop_toBottomOf="@+id/txt_pres"
        tools:layout_editor_absoluteX="146dp" />

</android.support.constraint.ConstraintLayout>