<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        >

        <Switch
            android:id="@+id/sw_pain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_gravity="center"
            android:text="@string/sw_pain" />
        <Switch
            android:id="@+id/sw_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:layout_marginStart="30dp"
            android:layout_gravity="center"
            android:text="@string/sw_count" />

        <ImageView
            android:id="@+id/img_trend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_gravity="end|bottom"
            android:contentDescription="@string/img_trend"
            />
    </LinearLayout>



    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        />


</LinearLayout>