<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_year"/>

                    <Spinner
                        android:id="@+id/sp_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/sp_year"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_month" />

                    <Spinner
                        android:id="@+id/sp_month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/sp_month"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_date"/>
                    <Spinner
                        android:id="@+id/sp_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/sp_date"
                        android:spinnerMode="dialog" />
                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_show"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_show" />
        </LinearLayout>


        <ImageView
            android:id="@+id/img_trend"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/img_trend"
            />
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/line_chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"/>

</LinearLayout>